# dataexpert-mcp

./: .gitignore  CONVENTIONS.md  README.md  secrets.env.example
.github/workflows/: zoho-ci.yml
servers/agentic-chat-deploy-mcp/: pyproject.toml  server.py
servers/deployment-ops-mcp/: pyproject.toml  server.py
servers/graphaware-mcp/: pyproject.toml  server.py
servers/memgraph-mcp/: pyproject.toml  server.py
servers/nuix-mcp/: pyproject.toml  server.py
servers/vsphere-lab-mcp/: README.md  pyproject.toml  server.py
servers/vsphere-lab-mcp/examples/: flexible-topology.json  minimal-topology.json  rhel9-topology.json
servers/zoho/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
servers/zoho-mcp/: .env.example  Dockerfile  README.md  healthcheck.mjs  package-lock.json  package.json
servers/zoho-mcp/src/: bootstrap.ts  config.ts  server.ts
servers/zoho-mcp/src/tools/: handlers.ts  register.ts
servers/zoho-mcp/src/zoho/: tokenManager.ts
servers/zoho/prisma/: schema.prisma
servers/zoho/src/: bootstrap.ts  config.ts  context.ts  server.ts
servers/zoho/src/tools/: handlers.ts
servers/zoho/src/zoho/: errors.ts  mappers.ts  tokenCipher.ts  tokenManager.ts  tokenStore.ts  zohoApi.ts
