[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dataexpert-agentic-chat-deploy-mcp"
version = "1.0.0"
description = "Deploys and restarts the agentic-chat application over SSH for DataExpert agentic AI"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pyyaml",
    "python-dotenv",
]

[project.scripts]
dataexpert-agentic-chat-deploy-mcp = "server:main"
