[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dataexpert-graphaware-mcp"
version = "1.0.0"
description = "GraphAware Hume MCP server for DataExpert agentic AI"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx",
]

[project.scripts]
dataexpert-graphaware-mcp = "server:main"
