[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dataexpert-memgraph-mcp"
version = "1.0.0"
description = "Memgraph MCP server for DataExpert agentic AI"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
]

[project.scripts]
dataexpert-memgraph-mcp = "server:main"
