[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dataexpert-nuix-mcp"
version = "1.0.0"
description = "Nuix Automate MCP server for DataExpert agentic AI"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "python-dotenv",
    "httpx",
]

[project.scripts]
dataexpert-nuix-mcp = "server:main"
